infoshare-back/build_error_clean.log

> Task :compileJava FAILED
.\gradlew.bat : C:\Users\user\Desktop
\04.Project_self\01.InfomationSharePa
ge\infoshare-back\src\main\java\com\i
nfoshare\controller\PostController.ja
va:5: error: cannot find symbol
위치 줄:1 문자:1
+ .\gradlew.bat classes --console=pla
in 2>&1 | Out-File -Encoding utf8  ..
.
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~
    + CategoryInfo          : N    ot
Specified: (C:\Users\user    \D...not
 find symbol:String    ) [], RemoteEx
ception
    + FullyQualifiedErrorId : N    at
iveCommandError
 
import com.infoshare.service.PostServ
ice;
                            ^
  symbol:   class PostService
  location: package com.infoshare.ser
vice
C:\Users\user\Desktop\04.Project_self
\01.InfomationSharePage\infoshare-bac
k\src\main\java\com\infoshare\control
ler\PostController.java:19: error: ca
nnot find symbol
    private final PostService postSer
vice;
                  ^
  symbol:   class PostService
  location: class PostController
C:\Users\user\Desktop\04.Project_self
\01.InfomationSharePage\infoshare-bac
k\src\main\java\com\infoshare\control
ler\PostController.java:16: error: ca
nnot find symbol
@RequiredArgsConstructor
^
  symbol:   class PostService
  location: class PostController
C:\Users\user\Desktop\04.Project_self
\01.InfomationSharePage\infoshare-bac
k\src\main\java\com\infoshare\service
\PostService.java:10: error: cannot f
ind symbol
import com.infoshare.repository.PostM
apper;
                               ^
  symbol:   class PostMapper
  location: package com.infoshare.rep
ository
C:\Users\user\Desktop\04.Project_self
\01.InfomationSharePage\infoshare-bac
k\src\main\java\com\infoshare\service
\PostService.java:27: error: cannot f
ind symbol
        private final PostMapper post
Mapper;
                      ^
  symbol:   class PostMapper
  location: class PostService
C:\Users\user\Desktop\04.Project_self
\01.InfomationSharePage\infoshare-bac
k\src\main\java\com\infoshare\service
\PostService.java:24: error: cannot f
ind symbol
@RequiredArgsConstructor
^
  symbol:   class PostMapper
  location: class PostService
6 errors

FAILURE: Build failed with an excepti
on.

* What went wrong:
Execution failed for task ':compileJa
va'.
> Compilation failed; see the compile
r error output for details.

* Try:
> Run with --info option to get more 
log output.
> Run with --scan to get full insight
s.

BUILD FAILED in 2s
1 actionable task: 1 executed
